Update segmentation to work with new data format
Improve code structure of segmentation

--- a/notebooks/mock-segmentation-inputs.ipynb
+++ b/notebooks/mock-segmentation-inputs.ipynb
@@ -23,9 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from darts_segmentation.segment import Segmenter\n",
+    "from darts_segmentation.segment import SMPSegmenter\n",
     "\n",
-    "model = Segmenter(\"../models/RTS_v6_tcvis.pt\")\n",
+    "model = SMPSegmenter(\"../models/RTS_v6_tcvis.pt\")\n",
     "out = model.segment_tile(ds)\n",
     "out"
    ]
@@ -54,6 +54,33 @@
     "final = prepare_export(out)\n",
     "final"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final.to_netcdf(\"../data/test.nc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xarray as xr\n",
+    "\n",
+    "xr.open_dataset(\"../data/test.nc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
