--- a/notebooks/model-convert.ipynb
+++ b/notebooks/model-convert.ipynb
@@ -20,23 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'architecture': 'UnetPlusPlus',\n",
-       " 'encoder': 'resnet34',\n",
-       " 'encoder_weights': 'random',\n",
-       " 'input_channels': 7}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load config and checkpoint\n",
     "path = \"../models/old/RTS_v6_notcvis/checkpoints/41.pt\"\n",
@@ -49,20 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Try loading\n",
     "model = smp.create_model(\n",
@@ -76,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +65,24 @@
     "                \"in_channels\": config[\"model\"][\"input_channels\"],\n",
     "                \"classes\": 1,\n",
     "            },\n",
-    "            \"input_combination\": [\"red\", \"green\", \"blue\", \"nir\", \"ndvi\", \"relative_elevation\", \"slope\"],\n",
+    "            \"input_combination\": [\n",
+    "                \"red\",\n",
+    "                \"green\",\n",
+    "                \"blue\",\n",
+    "                \"nir\",\n",
+    "                \"ndvi\",\n",
+    "                \"relative_elevation\",\n",
+    "                \"slope\",\n",
+    "            ],\n",
+    "            \"norm_factors\": {\n",
+    "                \"red\": 1 / 3000,\n",
+    "                \"green\": 1 / 3000,\n",
+    "                \"blue\": 1 / 3000,\n",
+    "                \"nir\": 1 / 3000,\n",
+    "                \"ndvi\": 1,\n",
+    "                \"relative_elevation\": 1 / 30000,\n",
+    "                \"slope\": 1 / 90,\n",
+    "            },\n",
     "        },\n",
     "        \"statedict\": model.module.state_dict(),\n",
     "    },\n",
@@ -100,20 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test it\n",
     "checkpoint = torch.load(\"../models/RTS_v6_notcvis.pt\")\n",
@@ -130,28 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'architecture': 'UnetPlusPlus', 'encoder': 'resnet34', 'encoder_weights': 'random', 'input_channels': 10}\n",
-      "<All keys matched successfully>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load config and checkpoint\n",
     "path = \"../models/old/RTS_v6_tcvis/checkpoints/14.pt\"\n",
@@ -192,6 +154,18 @@
     "                \"tc_greenness\",\n",
     "                \"tc_wetness\",\n",
     "            ],\n",
+    "            \"norm_factors\": {\n",
+    "                \"red\": 1 / 3000,\n",
+    "                \"green\": 1 / 3000,\n",
+    "                \"blue\": 1 / 3000,\n",
+    "                \"nir\": 1 / 3000,\n",
+    "                \"ndvi\": 1,\n",
+    "                \"relative_elevation\": 1 / 30000,\n",
+    "                \"slope\": 1 / 90,\n",
+    "                \"tc_brightness\": 1 / 255,\n",
+    "                \"tc_greenness\": 1 / 255,\n",
+    "                \"tc_wetness\": 1 / 255,\n",
+    "            },\n",
     "        },\n",
     "        \"statedict\": model.module.state_dict(),\n",
     "    },\n",
