Make preprocess function

--- a/notebooks/model-convert.ipynb
+++ b/notebooks/model-convert.ipynb
@@ -20,9 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'architecture': 'UnetPlusPlus',\n",
+       " 'encoder': 'resnet34',\n",
+       " 'encoder_weights': 'random',\n",
+       " 'input_channels': 7}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load config and checkpoint\n",
     "path = \"../models/old/RTS_v6_notcvis/checkpoints/41.pt\"\n",
@@ -35,9 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Try loading\n",
     "model = smp.create_model(\n",
@@ -83,6 +108,8 @@
     "                \"relative_elevation\": 1 / 30000,\n",
     "                \"slope\": 1 / 90,\n",
     "            },\n",
+    "            \"patch_size\": 1024,\n",
+    "            \"model_framework\": \"smp\",\n",
     "        },\n",
     "        \"statedict\": model.module.state_dict(),\n",
     "    },\n",
@@ -92,9 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test it\n",
     "checkpoint = torch.load(\"../models/RTS_v6_notcvis.pt\")\n",
@@ -111,9 +149,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'architecture': 'UnetPlusPlus', 'encoder': 'resnet34', 'encoder_weights': 'random', 'input_channels': 10}\n",
+      "<All keys matched successfully>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load config and checkpoint\n",
     "path = \"../models/old/RTS_v6_tcvis/checkpoints/14.pt\"\n",
@@ -166,6 +223,8 @@
     "                \"tc_greenness\": 1 / 255,\n",
     "                \"tc_wetness\": 1 / 255,\n",
     "            },\n",
+    "            \"patch_size\": 1024,\n",
+    "            \"model_framework\": \"smp\",\n",
     "        },\n",
     "        \"statedict\": model.module.state_dict(),\n",
     "    },\n",
