Replace gdalwarp with ds.rio.reproject_match

--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -6,16 +6,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
     "from pathlib import Path\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
     "import xarray as xr\n",
     "from darts_postprocessing.prepare_export import prepare_export\n",
     "from darts_preprocessing.preprocess_tobi import load_and_preprocess_planet_scene\n",
     "from darts_segmentation.segment import SMPSegmenter\n",
     "from lovely_tensors import monkey_patch\n",
     "from rich import traceback\n",
+    "from rich.logging import RichHandler\n",
     "\n",
     "xr.set_options(display_expand_data=False)\n",
+    "\n",
+    "# Set up logging\n",
+    "logging.basicConfig(level=logging.INFO, handlers=[RichHandler()])\n",
+    "logging.getLogger(\"darts_preprocessing\").setLevel(logging.DEBUG)\n",
     "\n",
     "monkey_patch()\n",
     "traceback.install(show_locals=True)\n"
@@ -23,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,10 +41,41 @@
     "\n",
     "# TODO: change to vrt\n",
     "elevation_path = DATA_ROOT / \"ArcticDEM\" / \"relative_elevation\" / f\"{scene_id}_relative_elevation_100.tif\"\n",
-    "slope_path = DATA_ROOT / \"ArcticDEM\" / \"slope\" / f\"{scene_id}_slope.tif\"\n",
-    "\n",
+    "slope_path = DATA_ROOT / \"ArcticDEM\" / \"slope\" / f\"{scene_id}_slope.tif\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tile = load_and_preprocess_planet_scene(fpath, elevation_path, slope_path)\n",
-    "tile\n"
+    "tile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile = tile.isel(x=slice(-1500, -1), y=slice(-1500, -1))\n",
+    "tile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile_low_res = tile.coarsen(x=16, y=16, boundary=\"trim\").mean()\n",
+    "fig, axs = plt.subplots(2, 5, figsize=(30, 10))\n",
+    "axs = axs.flatten()\n",
+    "for i, v in enumerate(tile_low_res.data_vars):\n",
+    "    tile_low_res[v].plot(ax=axs[i], cmap=\"gray\")\n",
+    "    axs[i].set_title(v)"
    ]
   },
   {
@@ -49,15 +87,6 @@
     "model = SMPSegmenter(\"../models/RTS_v6_notcvis.pt\")\n",
     "tile = model.segment_tile(tile)\n",
     "final = prepare_export(tile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tile"
    ]
   }
  ],
