--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -23,9 +23,10 @@
     "# Set up logging\n",
     "logging.basicConfig(level=logging.INFO, handlers=[RichHandler()])\n",
     "logging.getLogger(\"darts_preprocessing\").setLevel(logging.DEBUG)\n",
+    "logging.getLogger(\"darts_segmentation\").setLevel(logging.DEBUG)\n",
     "\n",
     "monkey_patch()\n",
-    "traceback.install(show_locals=True)\n"
+    "traceback.install(show_locals=True)"
    ]
   },
   {
@@ -36,7 +37,8 @@
    "source": [
     "DATA_ROOT = Path(\"../data/input\")\n",
     "\n",
-    "fpath = DATA_ROOT / \"planet/PSOrthoTile/4372514/5790392_4372514_2022-07-16_2459\"\n",
+    "# fpath = DATA_ROOT / \"planet/PSOrthoTile/4372514/5790392_4372514_2022-07-16_2459\"\n",
+    "fpath = DATA_ROOT / \"planet/PSOrthoTile/4974017/5854937_4974017_2022-08-14_2475\"\n",
     "scene_id = fpath.parent.name\n",
     "\n",
     "# TODO: change to vrt\n",
@@ -51,16 +53,6 @@
    "outputs": [],
    "source": [
     "tile = load_and_preprocess_planet_scene(fpath, elevation_path, slope_path)\n",
-    "tile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tile = tile.isel(x=slice(-1500, -1), y=slice(-1500, -1))\n",
     "tile"
    ]
   },
@@ -85,8 +77,22 @@
    "outputs": [],
    "source": [
     "model = SMPSegmenter(\"../models/RTS_v6_notcvis.pt\")\n",
-    "tile = model.segment_tile(tile)\n",
+    "tile = model.segment_tile(tile, batch_size=4)\n",
     "final = prepare_export(tile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_low_res = final.coarsen(x=16, y=16, boundary=\"trim\").mean()\n",
+    "fig, axs = plt.subplots(2, 6, figsize=(36, 10))\n",
+    "axs = axs.flatten()\n",
+    "for i, v in enumerate(final_low_res.data_vars):\n",
+    "    final_low_res[v].plot(ax=axs[i], cmap=\"gray\")\n",
+    "    axs[i].set_title(v)"
    ]
   }
  ],
