Update attrs and utilize datamask

--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -10,23 +10,24 @@
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import xarray as xr\n",
     "from darts_postprocessing.prepare_export import prepare_export\n",
-    "from darts_preprocessing.preprocess_tobi import load_and_preprocess_planet_scene\n",
+    "from darts_preprocessing.preprocess import load_and_preprocess_planet_scene\n",
     "from darts_segmentation.segment import SMPSegmenter\n",
-    "from lovely_tensors import monkey_patch\n",
     "from rich import traceback\n",
     "from rich.logging import RichHandler\n",
     "\n",
-    "xr.set_options(display_expand_data=False)\n",
+    "from darts.utils.earthengine import init_ee\n",
+    "from darts.utils.logging import setup_logging\n",
     "\n",
-    "# Set up logging\n",
-    "logging.basicConfig(level=logging.INFO, handlers=[RichHandler()])\n",
-    "logging.getLogger(\"darts_preprocessing\").setLevel(logging.DEBUG)\n",
-    "logging.getLogger(\"darts_segmentation\").setLevel(logging.DEBUG)\n",
-    "\n",
-    "monkey_patch()\n",
-    "traceback.install(show_locals=True)"
+    "setup_logging()\n",
+    "logging.basicConfig(\n",
+    "    level=logging.INFO,\n",
+    "    format=\"%(message)s\",\n",
+    "    datefmt=\"[%X]\",\n",
+    "    handlers=[RichHandler(rich_tracebacks=True)],\n",
+    ")\n",
+    "traceback.install(show_locals=False)\n",
+    "init_ee(\"ee-tobias-hoelzer\")"
    ]
   },
   {
@@ -35,15 +36,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_ROOT = Path(\"../data/input\")\n",
+    "DATA_ROOT = Path(\"../data\")\n",
     "\n",
-    "# fpath = DATA_ROOT / \"planet/PSOrthoTile/4372514/5790392_4372514_2022-07-16_2459\"\n",
-    "fpath = DATA_ROOT / \"planet/PSOrthoTile/4974017/5854937_4974017_2022-08-14_2475\"\n",
-    "scene_id = fpath.parent.name\n",
-    "\n",
-    "# TODO: change to vrt\n",
-    "elevation_path = DATA_ROOT / \"ArcticDEM\" / \"relative_elevation\" / f\"{scene_id}_relative_elevation_100.tif\"\n",
-    "slope_path = DATA_ROOT / \"ArcticDEM\" / \"slope\" / f\"{scene_id}_slope.tif\"\n"
+    "# fpath = DATA_ROOT / \"input/planet/PSOrthoTile/4372514/5790392_4372514_2022-07-16_2459\"\n",
+    "fpath = DATA_ROOT / \"input/planet/PSOrthoTile/4974017/5854937_4974017_2022-08-14_2475\"\n",
+    "arcticdem_dir = DATA_ROOT / \"input/ArcticDEM\"\n",
+    "cache_dir = DATA_ROOT / \"download\""
    ]
   },
   {
@@ -52,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tile = load_and_preprocess_planet_scene(fpath, elevation_path, slope_path)\n",
+    "tile = load_and_preprocess_planet_scene(fpath, arcticdem_dir, cache_dir)\n",
     "tile"
    ]
   },
@@ -63,7 +61,7 @@
    "outputs": [],
    "source": [
     "tile_low_res = tile.coarsen(x=16, y=16, boundary=\"trim\").mean()\n",
-    "fig, axs = plt.subplots(2, 5, figsize=(30, 10))\n",
+    "fig, axs = plt.subplots(2, 6, figsize=(30, 10))\n",
     "axs = axs.flatten()\n",
     "for i, v in enumerate(tile_low_res.data_vars):\n",
     "    tile_low_res[v].plot(ax=axs[i], cmap=\"gray\")\n",
@@ -76,9 +74,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SMPSegmenter(\"../models/RTS_v6_notcvis.pt\")\n",
+    "model = SMPSegmenter(\"../models/RTS_v6_tcvis.pt\")\n",
     "tile = model.segment_tile(tile, batch_size=4)\n",
-    "final = prepare_export(tile)"
+    "tile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_low_res = tile.coarsen(x=16, y=16, boundary=\"trim\").mean()\n",
+    "fig, axs = plt.subplots(2, 7, figsize=(36, 10))\n",
+    "axs = axs.flatten()\n",
+    "for i, v in enumerate(final_low_res.data_vars):\n",
+    "    if v == \"probabilities\":\n",
+    "        final_low_res[v].plot(ax=axs[i], cmap=\"gray\", vmin=0, vmax=1)\n",
+    "    else:\n",
+    "        final_low_res[v].plot(ax=axs[i], cmap=\"gray\")\n",
+    "    axs[i].set_title(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final = prepare_export(tile)\n",
+    "final"
    ]
   },
   {
@@ -88,10 +113,13 @@
    "outputs": [],
    "source": [
     "final_low_res = final.coarsen(x=16, y=16, boundary=\"trim\").mean()\n",
-    "fig, axs = plt.subplots(2, 6, figsize=(36, 10))\n",
+    "fig, axs = plt.subplots(2, 7, figsize=(36, 10))\n",
     "axs = axs.flatten()\n",
     "for i, v in enumerate(final_low_res.data_vars):\n",
-    "    final_low_res[v].plot(ax=axs[i], cmap=\"gray\")\n",
+    "    if v == \"probabilities\":\n",
+    "        final_low_res[v].plot(ax=axs[i], cmap=\"gray\", vmin=0, vmax=100)\n",
+    "    else:\n",
+    "        final_low_res[v].plot(ax=axs[i], cmap=\"gray\")\n",
     "    axs[i].set_title(v)"
    ]
   }
