Add proper nan handling

--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -10,6 +10,7 @@
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "import xarray as xr\n",
     "from darts_postprocessing.prepare_export import prepare_export\n",
     "from darts_preprocessing.preprocess import load_and_preprocess_planet_scene\n",
     "from darts_segmentation.segment import SMPSegmenter\n",
@@ -50,7 +51,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tile = load_and_preprocess_planet_scene(fpath, arcticdem_dir, cache_dir)\n",
+    "cache_file = DATA_ROOT / \"intermediate\" / f\"planet_{fpath.stem}.nc\"\n",
+    "force = False\n",
+    "if cache_file.exists() and not force:\n",
+    "    tile = xr.open_dataset(cache_file, engine=\"h5netcdf\", mask_and_scale=False)\n",
+    "else:\n",
+    "    tile = load_and_preprocess_planet_scene(fpath, arcticdem_dir, cache_dir)\n",
+    "    cache_file.parent.mkdir(exist_ok=True, parents=True)\n",
+    "    tile.to_netcdf(cache_file, engine=\"h5netcdf\")\n",
+    "\n",
     "tile"
    ]
   },
@@ -102,8 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final = prepare_export(tile)\n",
-    "final"
+    "tile = prepare_export(tile)\n",
+    "tile"
    ]
   },
   {
@@ -112,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_low_res = final.coarsen(x=16, y=16, boundary=\"trim\").mean()\n",
+    "final_low_res = tile.coarsen(x=16, y=16, boundary=\"trim\").mean()\n",
     "fig, axs = plt.subplots(2, 7, figsize=(36, 10))\n",
     "axs = axs.flatten()\n",
     "for i, v in enumerate(final_low_res.data_vars):\n",
