--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -11,9 +11,9 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import xarray as xr\n",
+    "from darts_ensemble.ensemble_v1 import EnsembleV1\n",
     "from darts_postprocessing.prepare_export import prepare_export\n",
     "from darts_preprocessing.preprocess import load_and_preprocess_planet_scene\n",
-    "from darts_segmentation.segment import SMPSegmenter\n",
     "from rich import traceback\n",
     "from rich.logging import RichHandler\n",
     "\n",
@@ -83,8 +83,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SMPSegmenter(\"../models/RTS_v6_tcvis.pt\")\n",
-    "tile = model.segment_tile(tile, batch_size=4)\n",
+    "ensemble = EnsembleV1(\n",
+    "    \"../models/RTS_v6_tcvis.pt\",\n",
+    "    \"../models/RTS_v6_notcvis.pt\",\n",
+    ")\n",
+    "tile = ensemble(tile, batch_size=4, keep_inputs=True)\n",
     "tile"
    ]
   },
@@ -95,7 +98,7 @@
    "outputs": [],
    "source": [
     "final_low_res = tile.coarsen(x=16, y=16, boundary=\"trim\").mean()\n",
-    "fig, axs = plt.subplots(2, 7, figsize=(36, 10))\n",
+    "fig, axs = plt.subplots(2, 8, figsize=(36, 10))\n",
     "axs = axs.flatten()\n",
     "for i, v in enumerate(final_low_res.data_vars):\n",
     "    if v == \"probabilities\":\n",
@@ -122,7 +125,7 @@
    "outputs": [],
    "source": [
     "final_low_res = tile.coarsen(x=16, y=16, boundary=\"trim\").mean()\n",
-    "fig, axs = plt.subplots(2, 7, figsize=(36, 10))\n",
+    "fig, axs = plt.subplots(2, 8, figsize=(36, 10))\n",
     "axs = axs.flatten()\n",
     "for i, v in enumerate(final_low_res.data_vars):\n",
     "    if v == \"probabilities\":\n",
