Fix the ordering of the models input-combination

--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,9 @@
     "    \"../models/RTS_v6_tcvis.pt\",\n",
     "    \"../models/RTS_v6_notcvis.pt\",\n",
     ")\n",
-    "tile = ensemble(tile, batch_size=4, keep_inputs=True)\n",
+    "logging.info(ensemble.rts_v6_tcvis_model.config[\"input_combination\"])\n",
+    "logging.info(ensemble.rts_v6_notcvis_model.config[\"input_combination\"])\n",
+    "tile = ensemble(tile, batch_size=4, keep_inputs=True, patch_size=1024, overlap=256)\n",
     "tile"
    ]
   },
