--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -56,7 +56,9 @@
     "if cache_file.exists() and not force:\n",
     "    tile = xr.open_dataset(cache_file, engine=\"h5netcdf\", mask_and_scale=False)\n",
     "else:\n",
-    "    tile = load_and_preprocess_planet_scene(fpath, arcticdem_dir, cache_dir)\n",
+    "    tile = load_and_preprocess_planet_scene(\n",
+    "        fpath, arcticdem_dir / \"slope.vrt\", arcticdem_dir / \"elevation.vrt\", cache_dir\n",
+    "    )\n",
     "    cache_file.parent.mkdir(exist_ok=True, parents=True)\n",
     "    tile.to_netcdf(cache_file, engine=\"h5netcdf\")\n",
     "\n",
