--- a/notebooks/model-convert.ipynb
+++ b/notebooks/model-convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,28 +15,170 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Sentinel based RTS v6 tcvis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"../models/original/RTS_v6_tcvis_s2native.pt\"\n",
+    "checkpoint = torch.load(path, map_location=\"cpu\")\n",
+    "checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try loading\n",
+    "model = smp.create_model(arch=\"Unet\", encoder_name=\"dpn107\", in_channels=10, encoder_weights=None)\n",
+    "model = torch.nn.DataParallel(model)\n",
+    "model.load_state_dict(checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge config and checkpoint\n",
+    "torch.save(\n",
+    "    {\n",
+    "        \"config\": {\n",
+    "            \"model\": {\n",
+    "                \"arch\": \"Unet\",\n",
+    "                \"encoder_name\": \"dpn107\",\n",
+    "                \"in_channels\": 10,\n",
+    "                \"classes\": 1,\n",
+    "            },\n",
+    "            \"input_combination\": [\n",
+    "                \"ndvi\",\n",
+    "                \"blue\",\n",
+    "                \"green\",\n",
+    "                \"red\",\n",
+    "                \"nir\",\n",
+    "                \"relative_elevation\",\n",
+    "                \"slope\",\n",
+    "                \"tc_brightness\",\n",
+    "                \"tc_greenness\",\n",
+    "                \"tc_wetness\",\n",
+    "            ],\n",
+    "            \"norm_factors\": {\n",
+    "                \"red\": 1 / 3000,\n",
+    "                \"green\": 1 / 3000,\n",
+    "                \"blue\": 1 / 3000,\n",
+    "                \"nir\": 1 / 3000,\n",
+    "                \"ndvi\": 1,\n",
+    "                \"relative_elevation\": 1 / 30000,\n",
+    "                \"slope\": 1 / 90,\n",
+    "                \"tc_brightness\": 1 / 255,\n",
+    "                \"tc_greenness\": 1 / 255,\n",
+    "                \"tc_wetness\": 1 / 255,\n",
+    "            },\n",
+    "            \"patch_size\": 1024,\n",
+    "            \"model_framework\": \"smp\",\n",
+    "            \"wandb-url\": \"https://wandb.ai/ingmarnitze_team/thaw-slump-segmentation/runs/1q2j7rwi/overview\",\n",
+    "            \"wandb-name\": \"northern-sweep-33\",\n",
+    "        },\n",
+    "        \"statedict\": model.module.state_dict(),\n",
+    "    },\n",
+    "    \"../models/RTS_v6_tcvis_s2native.pt\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sentinel based RTS v6 notcvis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"../models/original/RTS_v6_notcvis_s2native.pt\"\n",
+    "checkpoint = torch.load(path, map_location=\"cpu\")\n",
+    "checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try loading\n",
+    "model = smp.create_model(arch=\"UnetPlusPlus\", encoder_name=\"resnet34\", in_channels=7, encoder_weights=None)\n",
+    "model = torch.nn.DataParallel(model)\n",
+    "model.load_state_dict(checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge config and checkpoint\n",
+    "torch.save(\n",
+    "    {\n",
+    "        \"config\": {\n",
+    "            \"model\": {\n",
+    "                \"arch\": \"UnetPlusPlus\",\n",
+    "                \"encoder_name\": \"resnet34\",\n",
+    "                \"in_channels\": 7,\n",
+    "                \"classes\": 1,\n",
+    "            },\n",
+    "            \"input_combination\": [\n",
+    "                \"ndvi\",\n",
+    "                \"blue\",\n",
+    "                \"green\",\n",
+    "                \"red\",\n",
+    "                \"nir\",\n",
+    "                \"relative_elevation\",\n",
+    "                \"slope\",\n",
+    "            ],\n",
+    "            \"norm_factors\": {\n",
+    "                \"red\": 1 / 3000,\n",
+    "                \"green\": 1 / 3000,\n",
+    "                \"blue\": 1 / 3000,\n",
+    "                \"nir\": 1 / 3000,\n",
+    "                \"ndvi\": 1,\n",
+    "                \"relative_elevation\": 1 / 30000,\n",
+    "                \"slope\": 1 / 90,\n",
+    "            },\n",
+    "            \"patch_size\": 1024,\n",
+    "            \"model_framework\": \"smp\",\n",
+    "            \"wandb-url\": \"https://wandb.ai/ingmarnitze_team/thaw-slump-segmentation/runs/fcgm1rea/overview\",\n",
+    "            \"wandb-name\": \"RTS_v6_notcvis_sen2native\",\n",
+    "        },\n",
+    "        \"statedict\": model.module.state_dict(),\n",
+    "    },\n",
+    "    \"../models/RTS_v6_notcvis_s2native.pt\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Planet based RTS v6 notcvis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'architecture': 'UnetPlusPlus',\n",
-       " 'encoder': 'resnet34',\n",
-       " 'encoder_weights': 'random',\n",
-       " 'input_channels': 7}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load config and checkpoint\n",
     "path = \"../models/old/RTS_v6_notcvis/checkpoints/41.pt\"\n",
@@ -49,20 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Try loading\n",
     "model = smp.create_model(\n",
@@ -119,20 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test it\n",
     "checkpoint = torch.load(\"../models/RTS_v6_notcvis.pt\")\n",
@@ -151,26 +271,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'architecture': 'UnetPlusPlus', 'encoder': 'resnet34', 'encoder_weights': 'random', 'input_channels': 10}\n",
-      "<All keys matched successfully>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load config and checkpoint\n",
     "path = \"../models/old/RTS_v6_tcvis/checkpoints/14.pt\"\n",
