Update Visualization notebooks for arcticdem

--- a/notebooks/test-arcticdem-datacube.ipynb
+++ b/notebooks/test-arcticdem-datacube.ipynb
@@ -9,8 +9,11 @@
     "import logging\n",
     "from pathlib import Path\n",
     "\n",
+    "import hvplot.xarray  # noqa: F401\n",
     "import rioxarray  # noqa: F401\n",
     "from darts_preprocessing.data_sources.planet import load_planet_scene\n",
+    "from dask.distributed import Client\n",
+    "from odc.stac import configure_rio\n",
     "from rich import traceback\n",
     "from rich.logging import RichHandler\n",
     "\n",
@@ -23,7 +26,10 @@
     "    datefmt=\"[%X]\",\n",
     "    handlers=[RichHandler(rich_tracebacks=True)],\n",
     ")\n",
-    "traceback.install(show_locals=False)"
+    "traceback.install(show_locals=False)\n",
+    "client = Client()\n",
+    "configure_rio(cloud_defaults=True, aws={\"aws_unsigned\": True}, client=client)\n",
+    "client"
    ]
   },
   {
@@ -46,8 +52,15 @@
    "outputs": [],
    "source": [
     "# load planet scene\n",
-    "ds_planet = load_planet_scene(fpath).isel(x=slice(0, 1000), y=slice(7000, 8000))\n",
+    "ds_planet = load_planet_scene(fpath).isel(x=slice(0, 2000), y=slice(6000, 8000))\n",
     "ds_planet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get the Tile"
    ]
   },
   {
@@ -58,7 +71,7 @@
    "source": [
     "from darts_acquisition.arcticdem.datacube import get_arcticdem_tile\n",
     "\n",
-    "ds = get_arcticdem_tile(ds_planet, arcticdem_dir, resolution=32, buffer=0)\n",
+    "ds = get_arcticdem_tile(ds_planet, arcticdem_dir, resolution=2, buffer=0)\n",
     "ds"
    ]
   },
@@ -68,7 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.dem.plot()"
+    "crs = ds.rio.crs.to_string()\n",
+    "ds.dem.hvplot.image(aggregator=\"max\", rasterize=True, cmap=\"terrain\", crs=crs, projection=crs)"
    ]
   },
   {
@@ -77,7 +91,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.dem.rio.reproject_match(ds_planet).plot()"
+    "crs = ds_planet.rio.crs.to_string()\n",
+    "dem_plot = ds.dem.rio.reproject_match(ds_planet).hvplot.image(aggregator=\"max\", rasterize=True, cmap=\"terrain\")\n",
+    "red_plot = ds_planet.red.hvplot.image(x=\"x\", y=\"y\", aggregator=\"mean\", rasterize=True, cmap=\"reds\")\n",
+    "dem_plot + red_plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate Relative Elevation and Slope"
    ]
   },
   {
@@ -86,7 +110,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_planet.red.plot()"
+    "from darts_preprocessing.engineering.arcticdem import calculate_slope, calculate_topographic_position_index\n",
+    "\n",
+    "ds = calculate_topographic_position_index(ds)\n",
+    "ds = calculate_slope(ds)\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = ds.persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crs = ds.rio.crs.to_string()\n",
+    "dem_plot = ds.dem.hvplot.image(\n",
+    "    x=\"x\", y=\"y\", aggregator=\"max\", rasterize=True, cmap=\"terrain\", crs=crs, projection=crs, title=\"DEM\"\n",
+    ")\n",
+    "tpi_plot = ds.tpi.hvplot.image(\n",
+    "    x=\"x\", y=\"y\", aggregator=\"max\", rasterize=True, cmap=\"terrain\", crs=crs, projection=crs, title=\"TPI\"\n",
+    ")\n",
+    "slope_plot = ds.slope.hvplot.image(\n",
+    "    x=\"x\", y=\"y\", aggregator=\"max\", rasterize=True, cmap=\"terrain\", crs=crs, projection=crs, title=\"Slope\"\n",
+    ")\n",
+    "dem_plot + tpi_plot + slope_plot"
    ]
   }
  ],
