--- a/notebooks/viz-arcticdem.ipynb
+++ b/notebooks/viz-arcticdem.ipynb
@@ -13,13 +13,16 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "import geopandas as gpd\n",
+    "import hvplot.xarray\n",
     "import matplotlib.path as mpath\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import rioxarray  # noqa: F401\n",
+    "import rioxarray\n",
+    "import rioxarray.merge\n",
     "import xarray as xr\n",
     "import zarr\n",
     "from darts_acquisition.arcticdem.datacube import download_arcticdem_extent\n",
+    "from dask.distributed import Client\n",
     "from rich import traceback\n",
     "from rich.logging import RichHandler\n",
     "\n",
@@ -32,7 +35,9 @@
     "    datefmt=\"[%X]\",\n",
     "    handlers=[RichHandler(rich_tracebacks=True)],\n",
     ")\n",
-    "traceback.install(show_locals=False)"
+    "traceback.install(show_locals=False)\n",
+    "client = Client()\n",
+    "client"
    ]
   },
   {
@@ -74,39 +79,83 @@
     "# Check if zarr data already contains the data via the attrs\n",
     "arcticdem_datacube = xr.open_zarr(storage, mask_and_scale=True)\n",
     "loaded_scenes = arcticdem_datacube.attrs.get(\"loaded_scenes\", []).copy()\n",
+    "# extent[extent.dem_id.isin(loaded_scenes)].explore()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allbounds = extent[extent.dem_id.isin(loaded_scenes)].bounds\n",
+    "bounds = {\n",
+    "    \"x\": slice(allbounds.minx.min(), allbounds.maxx.max()),\n",
+    "    \"y\": slice(allbounds.maxy.max(), allbounds.miny.min()),\n",
+    "}\n",
+    "arcticdem_datacube_subset = arcticdem_datacube.sel(bounds)\n",
+    "arcticdem_datacube_subset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hvplot.xarray  # noqa\n",
     "\n",
+    "# crs = ccrs.NorthPolarStereo(central_longitude=-45)\n",
+    "crs = arcticdem_datacube.rio.crs\n",
+    "\n",
+    "# Calc height / width\n",
+    "height = 800  # px\n",
+    "width = int(height * arcticdem_datacube_subset.dem.shape[1] / arcticdem_datacube_subset.dem.shape[0])\n",
+    "\n",
+    "arcticdem_datacube_subset.hvplot.image(\n",
+    "    x=\"x\",\n",
+    "    y=\"y\",\n",
+    "    z=\"dem\",\n",
+    "    rasterize=True,\n",
+    "    aggregator=\"max\",\n",
+    "    crs=crs,\n",
+    "    projection=crs,\n",
+    "    cmap=\"gray\",\n",
+    "    dynamic=True,\n",
+    "    colorbar=True,\n",
+    "    height=height,\n",
+    "    width=width,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lowres_data = []\n",
     "for sceneinfo in extent.itertuples():\n",
     "    if sceneinfo.dem_id not in loaded_scenes:\n",
     "        continue\n",
     "\n",
-    "    geom = sceneinfo.SHAPE\n",
+    "    if \"SHAPE\" in sceneinfo._fields:\n",
+    "        geom = sceneinfo.SHAPE\n",
+    "    elif \"geom\" in sceneinfo._fields:\n",
+    "        geom = sceneinfo.geom\n",
+    "    else:\n",
+    "        geom = sceneinfo.geometry\n",
     "    scene_data = arcticdem_datacube.dem.sel(\n",
     "        x=slice(geom.bounds[0], geom.bounds[2]), y=slice(geom.bounds[3], geom.bounds[1])\n",
     "    )\n",
-    "    scene_data_lowres = scene_data.coarsen(x=coarsen, y=coarsen, boundary=\"trim\").mean()\n",
-    "    lowres_data.append(scene_data_lowres)\n",
-    "len(lowres_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lowres_data_da = xr.combine_by_coords(lowres_data).dem\n",
-    "lowres_data_da.rio.write_crs(\"EPSG:3413\", inplace=True)\n",
+    "    if coarsen is not None:\n",
+    "        scene_data_lowres = scene_data.coarsen(x=coarsen, y=coarsen, boundary=\"trim\").mean()\n",
+    "        lowres_data.append(scene_data_lowres)\n",
+    "    else:\n",
+    "        lowres_data.append(scene_data)\n",
+    "print(f\"Already {len(lowres_data)} tiles downloaded for {resolution=}m\")\n",
+    "lowres_data_da = rioxarray.merge.merge_arrays([da.rio.write_crs(3413) for da in lowres_data], nodata=float(\"nan\"))\n",
     "lowres_data_da"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lowres_data_da.plot()"
    ]
   },
   {
@@ -152,6 +201,52 @@
     "\n",
     "# Show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare loaded extends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import folium\n",
+    "\n",
+    "resolutions = [2, 10, 32]\n",
+    "\n",
+    "extents = {}\n",
+    "for resolution in resolutions:\n",
+    "    # Load extent file of arcticdem\n",
+    "    extent_fpath = arcticdem_dir / f\"ArcticDEM_Mosaic_Index_v4_1_{resolution}m.parquet\"\n",
+    "    if not extent_fpath.exists():\n",
+    "        download_arcticdem_extent(arcticdem_dir, resolution=resolution)\n",
+    "    extent = gpd.read_parquet(extent_fpath)\n",
+    "    extents[resolution] = extent\n",
+    "\n",
+    "loaded_extents = {}\n",
+    "for resolution in resolutions:\n",
+    "    datacube_fpath = arcticdem_dir / f\"datacube_{resolution}m_v4.1.zarr\"\n",
+    "    storage = zarr.storage.FSStore(datacube_fpath)\n",
+    "    arcticdem_datacube = xr.open_zarr(storage, mask_and_scale=True)\n",
+    "    loaded_scenes = arcticdem_datacube.attrs.get(\"loaded_scenes\", []).copy()\n",
+    "\n",
+    "    extent = extents[resolution]\n",
+    "    loaded_extent = extent[extent.dem_id.isin(loaded_scenes)].copy()\n",
+    "    loaded_extents[resolution] = loaded_extent\n",
+    "\n",
+    "m = folium.Map()\n",
+    "for resolution in resolutions:\n",
+    "    extents[resolution].to_crs(\"EPSG:4326\").explore(m=m, name=f\"ArcticDEM {resolution}m\", color=\"blue\")\n",
+    "    loaded_extents[resolution].to_crs(\"EPSG:4326\").explore(m=m, name=f\"ArcticDEM {resolution}m (loaded)\", color=\"red\")\n",
+    "\n",
+    "folium.LayerControl().add_to(m)\n",
+    "m"
    ]
   }
  ],
