Move data loading to acquisition [UNTESTED!]
Also integrate arcticdem datacube into pipeline

--- a/notebooks/test-arcticdem-datacube.ipynb
+++ b/notebooks/test-arcticdem-datacube.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "import hvplot.xarray  # noqa: F401\n",
     "import rioxarray  # noqa: F401\n",
-    "from darts_preprocessing.data_sources.planet import load_planet_scene\n",
+    "from darts_acquisition.planet import load_planet_scene\n",
     "from dask.distributed import Client\n",
     "from odc.stac import configure_rio\n",
     "from rich import traceback\n",
@@ -69,9 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from darts_acquisition.arcticdem.datacube import get_arcticdem_tile\n",
+    "from darts_acquisition.arcticdem import load_arcticdem_tile\n",
     "\n",
-    "ds = get_arcticdem_tile(ds_planet, arcticdem_dir, resolution=2, buffer=0)\n",
+    "ds = load_arcticdem_tile(ds_planet, arcticdem_dir, resolution=2, buffer=0)\n",
     "ds"
    ]
   },
